--- a/index.html
+++ b/index.html
@@ -1,19 +1,21 @@
 <!doctype HTML>
 <html>
 	<head>
+		<meta charset="utf-8">
 		<title>Les 1</title>
 		<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.8.1/build/cssreset/cssreset-min.css">
 		<link rel="stylesheet" href="style.css">
+
+
 	</head>
 	<body>
 
-	<div id="wrapper">
 		<header>
 			<nav>
 				<ul>
-					<li>link 1</li>
-					<li>link 2</li>
-					<li>link 3</li>
+					<li><a href="#">link</a></li>
+					<li><a href="#">link</a></li>
+					<li><a href="#">link</a></li>
 				</ul>
 			</nav>
 		</header>
@@ -44,7 +46,6 @@
 		</footer>
 
 
-	</div>
 
 
 	</body>
