--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Les 1</title>
-		<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.8.1/build/cssreset/cssreset-min.css">
+		<link rel="stylesheet" href="http://yui.yahooapis.com/3.8.1/build/cssreset/cssreset-min.css">
 		<link rel="stylesheet" href="style.css">
 
 
