--- a/hw1.html
+++ b/hw1.html
@@ -64,9 +64,11 @@
 		<article>
 		
 			<h1>Beroepen</h1>
-
-			<h2>Waar leiden we voor op?</h2>
-			<img src="img/beroepen.jpg" />
+			
+			<figure>
+				<figcaption>Waar leiden we voor op?</figcaption>
+				<img src="img/beroepen.jpg" />
+			</figure>
 
 			<p>
 				Studenten kunnen na deze opleiding aan het werk in een grote diversiteit aan beroepen in het interactieve media werkveld. Tijdens de opleiding kunnen zij zich – naast het generieke kernprogramma – middels de profileringsvakken individueel ontwikkelen.
