--- a/hw1/hw1.html
+++ b/hw1/hw1.html
@@ -29,7 +29,7 @@
 
 			<h1>Ontwerp opleiding voor Interactieve Media</h1>
 			<p>
-				CMD Amsterdam stelt ontwerpen centraal in de opleiding. Zij wil studenten leren te denken als een ontwerper en opleiden tot interactieve media ontwerpers met een goede aansluiting op de huidige én de toekomstige beroepspraktijk.
+				CMD Amsterdam stelt ontwerpen centraal in de opleiding. Zij wil studenten leren te denken als een ontwerper en opleiden tot interactieve media ontwerpers met een goede aansluiting op de huidige én de toekomstige beroepspraktijk.
 			</p>
 
 			<blockquote>
@@ -65,8 +65,10 @@
 		
 			<h1>Beroepen</h1>
 
-			<h2>Waar leiden we voor op?</h2>
-			<img src="img/beroepen.jpg" />
+			<figure>
+				<figcaption>Waar leiden we voor op?</figcaption>
+				<img src="img/beroepen.jpg" />
+			</figure>
 
 			<p>
 				Studenten kunnen na deze opleiding aan het werk in een grote diversiteit aan beroepen in het interactieve media werkveld. Tijdens de opleiding kunnen zij zich – naast het generieke kernprogramma – middels de profileringsvakken individueel ontwikkelen.
