--- a/hw1.html
+++ b/hw1.html
@@ -79,7 +79,7 @@
 			</p>
 
 			<p>
-				Mocht je als aankomend student meer willen weten of contact op willen nemen met een afgestudeerde studenten? Neem contact [link: contact] met ons op.
+				Mocht je als aankomend student meer willen weten of contact op willen nemen met een afgestudeerde studenten? Neem <a href="#">contact</a> met ons op.
 			</p>
 
 			<h1>Uitstroomberoepen:</h1>
