--- a/hw1/hw1.html
+++ b/hw1/hw1.html
@@ -29,7 +29,7 @@
 
 			<h1>Ontwerp opleiding voor Interactieve Media</h1>
 			<p>
-				CMD Amsterdam stelt ontwerpen centraal in de opleiding. Zij wil studenten leren te denken als een ontwerper en opleiden tot interactieve media ontwerpers met een goede aansluiting op de huidige én de toekomstige beroepspraktijk.
+				CMD Amsterdam stelt ontwerpen centraal in de opleiding. Zij wil studenten leren te denken als een ontwerper en opleiden tot interactieve media ontwerpers met een goede aansluiting op de huidige én de toekomstige beroepspraktijk.
 			</p>
 
 			<blockquote>
@@ -79,10 +79,10 @@
 			</p>
 
 			<p>
-				Mocht je als aankomend student meer willen weten of contact op willen nemen met een afgestudeerde studenten? Neem contact [link: contact] met ons op.
+				Mocht je als aankomend student meer willen weten of contact op willen nemen met een afgestudeerde studenten? Neem <a href="#">contact</a> met ons op.
 			</p>
 
-			<h2>Uitstroomberoepen:</h2>
+			<h1>Uitstroomberoepen:</h1>
 			<ol>
 				<li>
 					<a href="#">Frontenddeveloper</a>
